Fixed the temporary styling.

--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -41,7 +41,7 @@
     <header
       style="background-color: #a992fa; padding: 16px; padding-bottom: 50px"
     >
-      <h1>Links</h1>
+      <h1>SixLove</h1>
       <ul>
         <a href="{% url 'home' %}">
           <li>Home</li>
