--- a/app/project/registration/templates/registration/signup.html
+++ b/app/project/registration/templates/registration/signup.html
@@ -1,9 +1,18 @@
 {% extends './base.html' %} 
+{% block extra_styles %}
+<style>
+  main {
+      padding: 16px;
+  }
+</style>
+{% endblock %}
 {% block content %}
-<h1>Sign Up</h1>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Sign Up</button>
-</form>
+<main>
+  <h1>Sign Up</h1>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Sign Up</button>
+  </form>
+</main>
 {% endblock %}
