--- a/app/project/tennis/templates/tennis/tennis.html
+++ b/app/project/tennis/templates/tennis/tennis.html
@@ -1,6 +1,14 @@
 {% extends '../registration/base.html' %} 
 {% block extra_styles %}
 <style>
+  main {
+      padding: 16px;
+  }
+
+  h3 {
+    margin-top: 48px;
+  }
+
   .session {
         /* border: 1px solid #00000000; */
         box-shadow: 4px 4px 20px #00000030;
@@ -27,11 +35,11 @@
 </style>
 {% endblock %}
 {% block content %}
-<main style="padding: 16px">
+<main>
   <h2>Tennis</h2>
   <p>This is the tennis page for SixLove, you can view your tennis sessions here!</p>
 
-  <h3 style="margin-top: 48px;">Today</h3>
+  <h3>Today</h3>
 
   {% if today_sessions %}
   {% for session in today_sessions %}
@@ -57,7 +65,7 @@
     </a>
   </div>
 
-  <h3 style="margin-top: 48px;">Upcoming sessions</h3>
+  <h3>Upcoming sessions</h3>
   {% if upcoming_sessions %}
   {% for session in upcoming_sessions %}
   <div class="session">
@@ -73,7 +81,7 @@
   <p>No upcoming tennis sessions.</p>
   {% endif %}
 
-  <h3 style="margin-top: 48px;">History</h3>
+  <h3>History</h3>
   {% if past_sessions %}
   {% for session in past_sessions %}
   <div class="session">
