Adding the calendar links.

--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -53,6 +53,9 @@
         <a href="{% url 'tennis:tennis' %}">
           <li>Tennis</li>
         </a>
+        <a href="{% url 'planner:calendar' %}">
+          <li>Calendar</li>
+        </a>
         {% endif %}
       </ul>
 
