--- a/app/project/tennis/templates/tennis/tennis.html
+++ b/app/project/tennis/templates/tennis/tennis.html
@@ -60,7 +60,7 @@
     <a href="{% url 'tennis:add' %}">
       <button class="tennis-btn" style="margin-top: 20px;">Add Tennis Session</button>
     </a>
-    <a href="{% url 'tennis:add' %}">
+    <a href="{% url 'planner:calendar' %}">
       <button class="tennis-btn" style="margin-top: 20px;">View Calendar</button>
     </a>
   </div>
