--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -1,6 +1,13 @@
 {% extends './base.html' %} 
+{% block extra_styles %}
+<style>
+  main {
+      padding: 32px;
+  }
+</style>
+{% endblock %}
 {% block content %}
-<main style="padding: 16px;">
+<main>
   <h2 >Welcome to SixLove</h2>
   <p>This is the home page for SixLove, and welcome and enjoy!</p>
 </main>
