--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -13,7 +13,7 @@
 {% block content %}
 <main>
   <h2>Calendar</h2>
-  <p>Not yet implemented.</p>
+  <p>Not implemented yet.</p>
 
   <a href="{% url 'tennis:tennis' %}"
     ><button class="view-tennis-sessions-btn">View Tennis Sessions</button></a
