Fixed the temporary styling.

--- a/app/project/registration/templates/registration/onboarding.html
+++ b/app/project/registration/templates/registration/onboarding.html
@@ -1,6 +1,13 @@
 {% extends './base.html' %} 
+{% block extra_styles %}
+<style>
+  main {
+    padding: 16px 32px;
+  }
+</style>
+{% endblock %}
 {% block content %}
-<main style="padding: 16px;">
+<main>
   <h2>Onboarding</h2>
   <p>Not implemented yet.</p>
 </main>
