--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -20,6 +20,7 @@
 
         display: flex;
         justify-content: space-between;
+        align-items: flex-start;
       }
 
       header h1 {
@@ -28,7 +29,6 @@
 
       button,
       .btn {
-        /* margin-left: 20px; */
         margin-bottom: 16px;
         background-color: #000000;
         color: #ffffff;
@@ -55,11 +55,22 @@
 
       .auth {
         text-align: right;
-        /* margin-top: -100px; */
       }
 
-      .auth-btns {
+      /* .auth-btns {
         margin-top: 24px;
+      } */
+
+      .login-btns button {
+        width: 100px;
+      }
+
+      @media only screen and (max-width: 1023px) {
+        .login-btns {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
       }
     </style>
     {% block extra_styles %}{% endblock %}
@@ -96,7 +107,7 @@
           </form>
         </div>
         {% else %}
-        <div class="auth-btns">
+        <div class="auth-btns login-btns">
           <a href="{% url 'login' %}"><button>Login</button></a>
           <a href="{% url 'signup' %}"><button>Sign Up</button></a>
         </div>
