Connecting the SASS files.

--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=styles.css.map */
+main {
+  padding: 16px 32px;
+}
+
+.view-tennis-sessions-btn {
+  margin-top: 20px;
+}/*# sourceMappingURL=styles.css.map */
