--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -74,6 +74,7 @@
       }
     </style>
     {% block extra_styles %}{% endblock %}
+    {% block scripts %}{% endblock %}
   </head>
   <body>
     <header>
