--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -9,14 +9,11 @@
 {% block content %}
 <main>
   <h2>Calendar</h2>
-  <p>Not implemented yet.</p>
-
-  <section class="calendar">
-
-  </section>
-
   <a href="{% url 'tennis:tennis' %}"
     ><button class="view-tennis-sessions-btn">View Tennis Sessions</button></a
   >
+
+  <section class="calendar"></section>
+
 </main>
 {% endblock %}
