Working on the calendar functionality.

--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static './planner/styles/styles.css' %}">
 {% endblock %}
 {% block scripts %}
-<script src="{% static './planner/scripts/calendar.js' %}" defer></script>
+<!-- <script src="{% static './planner/scripts/calendar2.js' %}" defer></script> -->
 {% endblock %}
 {% block content %}
 <main>
