--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -13,7 +13,7 @@
     ><button class="view-tennis-sessions-btn">View Tennis Sessions</button></a
   >
 
-  <section class="calendar">{{ calendar.monthcalendar }}</section>
+  <section class="calendar"></section>
 
   {% comment %}
   <a href="{% url 'planner:calendar' year=prev_year month=prev_month %}">&lt;</a>
