--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -1,4 +1,4 @@
-{% extends '../registration/base.html' %}
+{% extends './base.html' %}
 {% load static %}
 {% block extra_styles %}
 <link rel="stylesheet" href="{% static './planner/styles/styles.css' %}">
