--- a/app/project/planner/templates/planner/base.html
+++ b/app/project/planner/templates/planner/base.html
@@ -3,76 +3,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SixLove | {{ title }}</title>
-    <style>
-      * {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-          Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-          sans-serif;
-      }
-
-      body {
-        margin: 0;
-      }
-
-      header {
-        background-color: #a992fa;
-        padding: 32px;
-
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-      }
-
-      header h1 {
-        margin: 0;
-      }
-
-      button,
-      .btn {
-        margin-bottom: 16px;
-        background-color: #000000;
-        color: #ffffff;
-        font-weight: bold;
-
-        border: none;
-        border-radius: 8px;
-        padding: 8px 16px;
-      }
-
-      button:hover,
-      .btn:hover {
-        cursor: pointer;
-        background-color: #207025;
-      }
-
-      .tennis-btn {
-        margin-left: 0;
-      }
-
-      a {
-        color: #000000;
-      }
-
-      .auth {
-        text-align: right;
-      }
-
-      /* .auth-btns {
-        margin-top: 24px;
-      } */
-
-      .login-btns button {
-        width: 100px;
-      }
-
-      @media only screen and (max-width: 1023px) {
-        .login-btns {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-        }
-      }
-    </style>
+    {% load static %}
+    <link rel="stylesheet" href="{% static './planner/styles/style.css' %}">
     {% block extra_styles %}{% endblock %}
     {% block scripts %}{% endblock %}
   </head>
