--- a/app/project/planner/templates/planner/base.html
+++ b/app/project/planner/templates/planner/base.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SixLove | {{ title }}</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static './planner/styles/style.css' %}">
+    <link rel="stylesheet" href="{% static './planner/styles/styles.css' %}">
     {% block extra_styles %}{% endblock %}
     {% block scripts %}{% endblock %}
   </head>
