--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -1,5 +1,8 @@
 {% extends './base.html' %}
 {% load static %}
+{% block extra_styles %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+{% endblock %}
 {% block scripts %}
 <script src="{% static './planner/scripts/calendar.js' %}" defer></script>
 {% endblock %}
@@ -10,7 +13,17 @@
     ><button class="view-tennis-sessions-btn">View Tennis Sessions</button></a
   >
 
-  <section class="calendar">{{ tennis_sessions }}</section>
+  <section class="calendar-section">
+    <div class="undecided">
+      <div class="calendar">
+        <div class="month">
+          <span class="prev"><i class="fas fa-chevron-left"></i></span>
+          <div class="date">February 2024</div>
+          <span class="next"><i class="fas fa-chevron-right"></i></span>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </main>
 {% endblock %}
