--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block content %}
 <main>
-  <h2>Calendar</h2>
+  <!-- <h2>Calendar</h2> -->
   <!-- <a href="{% url 'tennis:tennis' %}"
     ><button class="view-tennis-sessions-btn">View Tennis Sessions</button></a
   > -->
@@ -40,8 +40,8 @@
           <div class="day">4</div>
           <div class="day">5</div>
           <div class="day">6</div>
-          <div class="day">7</div>
-          <div class="day">8</div>
+          <div class="day active">7</div>
+          <div class="day today">8</div>
           <div class="day">9</div>
           <div class="day">10</div>
           <div class="day">11</div>
@@ -50,7 +50,7 @@
           <div class="day">14</div>
           <div class="day">15</div>
           <div class="day">16</div>
-          <div class="day">17</div>
+          <div class="day tennis-session">17</div>
           <div class="day">18</div>
           <div class="day">19</div>
           <div class="day">20</div>
