--- a/app/project/planner/static/planner/styles/_variables.scss
+++ b/app/project/planner/static/planner/styles/_variables.scss
@@ -4,5 +4,6 @@ $violet: #A992FA;
 $brand-colour: #A992FA;
 $dark-grey: #3D3D3D;
 $light-grey:#656468;
-$white-grey:#b0b0b0;
+$white-grey:#8F8E8E;
+$disabled: #B3B3B3;
 $white: #FFFFFF;
