--- a/app/project/planner/static/planner/styles/_variables.scss
+++ b/app/project/planner/static/planner/styles/_variables.scss
@@ -2,6 +2,7 @@
 $brand-colour: #578DDD;
 $violet: #A992FA;
 $brand-colour: #A992FA;
+$green: #32ca6f;
 $dark-grey: #3D3D3D;
 $light-grey:#656468;
 $white-grey:#8F8E8E;
