--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -40,7 +40,7 @@
           <div class="day">4</div>
           <div class="day">5</div>
           <div class="day">6</div>
-          <div class="day active">7</div>
+          <div class="day active tennis-session">7</div>
           <div class="day today">8</div>
           <div class="day">9</div>
           <div class="day">10</div>
