--- a/app/project/planner/static/planner/styles/_variables.scss
+++ b/app/project/planner/static/planner/styles/_variables.scss
@@ -1,6 +1,7 @@
 // Colours
 $brand-colour: #578DDD;
 $violet: #A992FA;
+$orange: #ee7d2c;
 $brand-colour: #A992FA;
 $green: #32ca6f;
 $dark-grey: #3D3D3D;
