--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -1,12 +1,14 @@
-{% extends './base.html' %}
-{% load static %}
-{% block extra_styles %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-{% endblock %}
-{% block scripts %}
+{% extends './base.html' %} {% load static %} {% block extra_styles %}
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+{% endblock %} {% block scripts %}
 <script src="{% static './planner/scripts/calendar.js' %}" defer></script>
-{% endblock %}
-{% block content %}
+{% endblock %} {% block content %}
 <main>
   <!-- <h2>Calendar</h2> -->
   <!-- <a href="{% url 'tennis:tennis' %}"
@@ -67,9 +69,15 @@
           <div class="day next-date">2</div>
           <div class="day next-date">3</div>
         </div>
+        <div class="selectDate-today">
+          <div class="selectDate">
+            <input type="month" name="selectDatePicker" id="selectDatePicker">
+            <button class="selectDate-btn">go</button>
+          </div>
+          <button class="today-btn">today</button>
+        </div>
       </div>
     </div>
   </section>
-
 </main>
 {% endblock %}
