--- a/app/project/planner/static/planner/styles/_calendar.scss
+++ b/app/project/planner/static/planner/styles/_calendar.scss
@@ -179,6 +179,7 @@
 
       .today-btn {
         height: 40px;
+        margin: 0;
         background-color: $orange;
         font-size: 1rem;
         text-transform: uppercase;
@@ -188,6 +189,19 @@
           background-color: #ffffff00;
           border: 1px solid $orange;
         }
+      }
+    }
+  }
+}
+
+
+@media only screen and (max-width: 400px) {
+  .calendar-section {
+    .calendar {
+      .selectDate-today {
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 24px;
       }
     }
   }
