--- a/app/project/planner/static/planner/styles/styles.css
+++ b/app/project/planner/static/planner/styles/styles.css
@@ -215,6 +215,7 @@ a {
 }
 .calendar-section .calendar .selectDate-today .today-btn {
   height: 40px;
+  margin: 0;
   background-color: #ee7d2c;
   font-size: 1rem;
   text-transform: uppercase;
@@ -223,4 +224,12 @@ a {
   color: #ee7d2c;
   background-color: rgba(255, 255, 255, 0);
   border: 1px solid #ee7d2c;
+}
+
+@media only screen and (max-width: 400px) {
+  .calendar-section .calendar .selectDate-today {
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 24px;
+  }
 }/*# sourceMappingURL=styles.css.map */
