Generating the calendar with JS.

--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -32,7 +32,7 @@
           <div>sat</div>
           <div>sun</div>
         </div>
-        <div class="days">
+        <!-- <div class="days">
           <div class="day prev-date">29</div>
           <div class="day prev-date">30</div>
           <div class="day prev-date">31</div>
@@ -68,6 +68,9 @@
           <div class="day next-date">1</div>
           <div class="day next-date">2</div>
           <div class="day next-date">3</div>
+        </div> -->
+        <div class="days">
+          <!-- Generating the days with Javascript -->
         </div>
         <div class="selectDate-today">
           <div class="selectDate">
