Generating the calendar with JS.

--- a/app/project/planner/templates/planner/calendar.html
+++ b/app/project/planner/templates/planner/calendar.html
@@ -19,9 +19,9 @@
     <div class="undecided">
       <div class="calendar">
         <div class="month">
-          <span class="prev"><i class="fas fa-chevron-left"></i></span>
-          <div class="date">February 2024</div>
-          <span class="next"><i class="fas fa-chevron-right"></i></span>
+          <span class="prev-btn"><i class="fas fa-chevron-left"></i></span>
+          <div class="date"></div>
+          <span class="next-btn"><i class="fas fa-chevron-right"></i></span>
         </div>
         <div class="weekdays">
           <div>mon</div>
